# archbuild

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
master/: auth.py  buildbot.tac  changes.py  config.example.yml  factory.py  master.cfg  steps.py  util.py  worker.py
worker/: buildbot.tac
worker/info/: admin  host
