[tool.poetry]
name = "archbuild"
version = "0.1.0"
description = "Arch Linux build automation with Buildbot"
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
buildbot = "^2.8.4"
buildbot-worker = "^2.8.4"
buildbot-www = "^2.8.4"
psutil = "^5.7.2"
service_identity = "^18.1.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "=20.8b1"
isort = "^5.5.3"
pylint = "^2.6.0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
