[tool.poetry]
name = "archbuild"
version = "0.1.0"
description = "Arch Linux build automation with Buildbot"
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
buildbot = "^3.8.0"
buildbot-worker = "^3.8.0"
buildbot-www = "^3.8.0"
psutil = "^5.9.5"
service_identity = "^21.1.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
rope = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
