[tool.poetry]
name = "archbuild"
version = "0.1.0"
description = "Arch Linux build automation with Buildbot"
authors = ["Maxime Gauduin <alucryd@archlinux.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
buildbot = "^3.11.0"
buildbot-worker = "^3.11.0"
buildbot-www = "^3.11.0"
psutil = "^5.9.8"
service_identity = "^24.1.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pylint = "^3.1.0"
rope = "^1.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
